Fixed job text overlap on home page

--- a/blocks/job-list/job-list.css
+++ b/blocks/job-list/job-list.css
@@ -56,8 +56,10 @@
     margin-block: unset;
 }
 .job-list .single-job h3{
+    margin-block: .5em;
     font-weight: 300; /*Currently we only have vars for 200 and 400*/
     font-size: 1.7em;
+    line-height: 1em;
 }
 .job-list .single-job p:nth-of-type(1){
 }
